--- a/src/main/resources/com/example/project02/views/adminEquip.fxml
+++ b/src/main/resources/com/example/project02/views/adminEquip.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -38,6 +39,7 @@
          </fill>
       </Rectangle>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#def25d" height="70.0" stroke="#def25d" strokeType="INSIDE" width="800.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ffffffcd" height="105.0" layoutX="30.0" layoutY="482.0" stroke="WHITE" strokeType="INSIDE" width="635.0" />
         <Label layoutX="25.0" layoutY="14.0" text="ผู้ดูแล |" textFill="#506405">
          <font>
             <Font size="15.0" />
@@ -73,37 +75,43 @@
          <font>
             <Font size="14.0" />
          </font></Label>
-      <Label layoutX="104.0" layoutY="495.0" text="เพื่มหรือปรับจำนวนอุปกรณ์ : " textFill="WHITE">
+      <Label layoutX="45.0" layoutY="487.0" text="เพื่ม-ลบรายชื่ออุปกรณ์ และ เพิ่ม-ลดจำนวนอุปกรณ์ : " textFill="#506405">
          <font>
             <Font name="System Bold" size="17.0" />
          </font>
       </Label>
-      <TextField fx:id="nameField" layoutX="216.0" layoutY="527.0" prefHeight="25.0" prefWidth="149.0">
+      <TextField fx:id="nameField" layoutX="124.0" layoutY="516.0" prefHeight="25.0" prefWidth="149.0">
          <font>
             <Font size="15.0" />
          </font>
       </TextField>
-      <Label layoutX="373.0" layoutY="532.0" text="จำนวนที่มี : " textFill="WHITE">
+      <Label layoutX="276.0" layoutY="521.0" text="จำนวน : " textFill="#506405">
          <font>
             <Font size="15.0" />
          </font>
       </Label>
-      <TextField fx:id="numberField" layoutX="441.0" layoutY="527.0" prefHeight="25.0" prefWidth="51.0">
+      <TextField fx:id="numberField" layoutX="327.0" layoutY="516.0" prefHeight="25.0" prefWidth="51.0">
          <font>
             <Font size="15.0" />
          </font>
       </TextField>
-      <Label layoutX="143.0" layoutY="532.0" text="ชื่ออุปกรณ์ : " textFill="WHITE">
+      <Label layoutX="45.0" layoutY="521.0" text="ชื่ออุปกรณ์ : " textFill="#506405">
          <font>
             <Font size="15.0" />
          </font>
       </Label>
-      <Button layoutX="509.0" layoutY="527.0" mnemonicParsing="false" onAction="#handleSetButtonAction" text="ปรับ" textAlignment="JUSTIFY">
+      <Button layoutX="590.0" layoutY="516.0" mnemonicParsing="false" onAction="#handleSetButtonAction" text="ยืนยัน" textAlignment="JUSTIFY">
          <font>
             <Font size="15.0" />
          </font>
       </Button>
-      <Label fx:id="errorLabel" layoutX="143.0" layoutY="568.0" text="errorLabel" textFill="WHITE">
+      <Label fx:id="errorLabel" layoutX="45.0" layoutY="558.0" text="errorLabel">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </Label>
+      <ChoiceBox fx:id="doChoiceBox" layoutX="428.0" layoutY="521.0" prefWidth="150.0" />
+      <Label layoutX="385.0" layoutY="521.0" text="คำสั่ง : " textFill="#506405">
          <font>
             <Font size="15.0" />
          </font>
