--- a/src/main/resources/com/example/project02/views/adminPlanAssign.fxml
+++ b/src/main/resources/com/example/project02/views/adminPlanAssign.fxml
@@ -39,11 +39,7 @@
          </fill>
       </Rectangle>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ffffffcd" height="399.0" layoutX="54.0" layoutY="118.0" stroke="WHITE" strokeType="INSIDE" width="606.0" />
-      <Label layoutX="68.0" layoutY="140.0" text="ID:" textFill="#506405">
-         <font>
-            <Font size="15.0" />
-         </font></Label>
-      <Label layoutX="68.0" layoutY="174.0" text="ชื่องาน:" textFill="#506405">
+      <Label layoutX="69.0" layoutY="140.0" text="ชื่องาน:" textFill="#506405">
          <font>
             <Font size="15.0" />
          </font></Label>
@@ -61,8 +57,7 @@
          <font>
             <Font size="15.0" />
          </font></Label>
-      <TextField fx:id="idField" layoutX="126.0" layoutY="136.0" />
-      <TextField fx:id="nameField" layoutX="126.0" layoutY="170.0" prefHeight="25.0" prefWidth="326.0" />
+      <TextField fx:id="nameField" layoutX="126.0" layoutY="138.0" prefHeight="25.0" prefWidth="326.0" />
       <TextArea fx:id="detailsArea" layoutX="68.0" layoutY="341.0" prefHeight="119.0" prefWidth="577.0" />
       <Button layoutX="602.0" layoutY="468.0" mnemonicParsing="false" onAction="#handleAddButtonAction" text="เพิ่ม">
          <font>
@@ -72,20 +67,20 @@
          <font>
             <Font size="15.0" />
          </font></Label>
-      <Label layoutX="68.0" layoutY="209.0" text="เลือกคนทำงาน:" textFill="#506405">
+      <Label layoutX="66.0" layoutY="176.0" text="เลือกคนทำงาน:" textFill="#506405">
          <font>
             <Font size="15.0" />
          </font></Label>
-      <ChoiceBox fx:id="workersChoiceBox" layoutX="164.0" layoutY="204.0" prefHeight="25.0" prefWidth="213.0" />
-      <Label layoutX="68.0" layoutY="241.0" text="รายชื่อคนที่ทำงาน:" textFill="#506405">
+      <ChoiceBox fx:id="workersChoiceBox" layoutX="167.0" layoutY="174.0" prefHeight="25.0" prefWidth="213.0" />
+      <Label layoutX="66.0" layoutY="210.0" text="รายชื่อคนที่ทำงาน:" textFill="#506405">
          <font>
             <Font size="15.0" />
          </font></Label>
-      <Label fx:id="workersLabel" layoutX="187.0" layoutY="241.0" text="workersLabel" textFill="#506405">
+      <Label fx:id="workersLabel" alignment="TOP_LEFT" layoutX="179.0" layoutY="210.0" prefHeight="54.0" prefWidth="449.0" text="workersLabel" textFill="#506405" wrapText="true">
          <font>
             <Font size="15.0" />
          </font></Label>
-      <Button layoutX="385.0" layoutY="204.0" mnemonicParsing="false" onAction="#handleAddWorkerButtonAction" text="เพิ่มคนงาน">
+      <Button layoutX="393.0" layoutY="171.0" mnemonicParsing="false" onAction="#handleAddWorkerButtonAction" text="เพิ่มคนงาน">
          <font>
             <Font size="15.0" />
          </font></Button>
